--- a/pom.xml
+++ b/pom.xml
@@ -13,13 +13,22 @@
 
 	<dependencies>
 		<!-- unit testing -->
+		<!--<dependency>-->
+		<!--	<groupId>junit</groupId>-->
+		<!--	<artifactId>junit</artifactId>-->
+		<!--	<version>4.11</version>-->
+		<!--	<scope>test</scope>-->
+		<!--</dependency>-->
+		
+		<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.11</version>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
+			<version>5.7.0</version>
 			<scope>test</scope>
 		</dependency>
-
+		
+		
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
